# glTF-Metadata-CLI

./: .editorconfig  .gitignore  .gitmodules  Cargo.lock.license  Cargo.toml  LICENSE  README.md
.reuse/: dep5
examples/: Box.glb  Box.gltf  sample.khr_xmp.json  sample.khr_xmp.json.license  sample.khr_xmp_json_ld.json
examples/edge-cases/: README.md
examples/edge-cases/language-alternatives/: Box.gltf  language_alternatives.json
examples/edge-cases/language-attribute/: Box.gltf  language_attribute.json
src/: io_helpers.rs  main.rs
src/json_models/: asset.rs  extension.rs  gltf.rs  khr_xmp.rs  khr_xmp_json_ld.rs  mod.rs
src/managers/: khr_xmp_json_ld_manager.rs  khr_xmp_manager.rs  mod.rs
tests/: gltf.rs
